# side-effect

./: Cargo.toml
assets/images/: bonus.psd  effect.psd  npc.psd
assets/shaders/: bonus_material.wgsl  monster_material.wgsl  player_material.wgsl
src/: game.rs  main.rs  states.rs
src/core/: camera.rs  direction.rs  mod.rs
src/core/materials/: bonus_material.rs  mod.rs  monster_material.rs  player_material.rs
src/core/objects/: bonus.rs  collision_groups.rs  mod.rs  monster.rs  player.rs  shape.rs  side_effect.rs
src/core/scene_builder/: bonus.rs  mod.rs  monster.rs  player.rs  scene_boundaries.rs  wall.rs
