[package]
name = "side-effect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0" }
bevy_rapier2d = "0.21.0"
bitflags = "2.0.2"
bevy_prototype_debug_lines = "0.10"
rand = "0.8.5"